apps/generic/overlays/audiobookshelf/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
spec:
  template:
    spec:
      containers:
        - name: container
          image: ghcr.io/advplyr/audiobookshelf:2.36.0
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /config
              subPath: configs/audiobookshelf/
            - name: yasr-volume
              mountPath: /metadata
              subPath: configs/audiobookshelf/
            - name: main-volume
              mountPath: ${AUDIOBOOKSHELF_MOUNT_PATH:=/data/books}
              subPath: ${AUDIOBOOKSHELF_BOOKS_PATH:=public/Books}
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
