apps/generic/overlays/audiobookshelf/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
